add physical time

--- a/src/intro/basics.tex
+++ b/src/intro/basics.tex
@@ -26,7 +26,7 @@
 
 拿一台电脑来举例。抽象来讲一个程序为了运行需要数据和计算资源。数据需要存储在计算机上，首选是存储在内存里。不同容量内存有不同价格。当我们需要单条内存10倍内存容量时，这个内存价格通常不是10倍而是更高。原因是单条内存容量越高，离物理局限越近，成品率越低，价格也越高，这就是物理资源稀缺性。这意味着额外的一块钱带来的内存容量提升会低于之前一块钱的效果，这就是边际效益递减。因此与其说我把这一块钱投资到已经很大的内存条上，还不如再买一块新的内存。主板在支持内存条数量这个问题上也有边际效应递减的问题，因此当主板支持一定数量的内存条后再增加额外的内存条就不合算了。这时候需要考虑把数据存储在硬盘上，因为硬盘更大更便宜。但如果硬盘的所有属性均优于内存，那么内存应该会慢慢退出消费市场无人购买。那么内存既然依然存在，硬盘必然有一些劣势，那就是硬盘速度大幅低于内存速度，这便是性价比权衡。我们选择了更大的容量，但是牺牲了数据处理速度。当数据量继续提升至硬盘的大小极限时，硬盘需要用磁带机来替换，但是这样数据处理速度会更慢。可选的单机存储方案是有限的，总存在一个数据量极限，超过这个极限之后速度慢的无法接受。这时候必须得考虑用多台机器来存储数据。
 
-计算资源也存在同样的规律。单块CPU处理速度因为光速的原因存在极限。这时候需要考虑多块CPU来处理数据。但是主板能支持的CPU个数通常是有限的。和数据存储碰到的问题一样，当我们对CPU处理速度达到一定要求之后必须考虑用多台机器来处理。其它计算资源也面临同样的问题，比如网卡、GPU、路由器。
+计算资源也存在同样的规律。单块CPU处理速度因为光速的原因存在极限。这时候需要考虑多块CPU来处理数据。但是主板能支持的CPU个数通常是有限的。和数据存储碰到的问题一样，当我们对CPU处理速度的要求达到一定极限之后必须考虑用多台机器来处理。其它计算资源也面临同样的问题，比如网卡、GPU、路由器。
 
 
 人们通常会低估单机处理能力，同时高估自己解决分布式系统的能力。因此当我们面临系统设计的问题时，能用单台机器解决就用单台机器，纵向扩容直至财务预算无法满足需求。接下来才能考虑横向扩展，用分布式系统解决方案。
