add time section

--- a/src/pds.tex
+++ b/src/pds.tex
@@ -41,6 +41,9 @@
 %   "l", "r" and "d" means move among matrix nodes.
 \usepackage{tikz-cd}
 
+% margin note
+\usepackage{marginnote}
+
 
 % create index
 \usepackage{mathtools}
@@ -96,7 +99,6 @@
 
 
 \usepackage{epigraph}
-
 
 
 \newcommand\cindex[1]{\underline{#1}\index{#1}}
