--- a/src/time/physical.time.tex
+++ b/src/time/physical.time.tex
@@ -6,13 +6,38 @@
 
 
 
-虽然我们有非常正式的时间定义，但是在实际生活中大家不可能衡量每天的$\frac{1}{86400}$到底有多长，也不会拿本子去数铯-$133$原子是不是经过了$9192631770$个周期。因此我们需要其它的方法来提供一个相对准确的时间。电脑的时间是通过由主板BIOS的时钟电路来维护的。 但是主板提供的这个时间不一定很准，温度的高低都有可能影响准确率。这时候就需要用一台我们认为准确的机器来校对时间不准的机器。这个校对通常是通过一个\cindex{NTP}服务\footnote{RFC-1305}来提供的。
+虽然我们有非常正式的时间定义，但是在实际生活中大家不可能衡量每天的$\frac{1}{86400}$到底有多长，也不会拿本子去数铯-$133$原子是不是经过了$9192631770$个周期。因此我们需要其它的方法来提供一个相对准确的时间。电脑的时间是通过由主板BIOS的时钟电路来维护的。 但是主板提供的这个时间不一定很准，温度的高低都有可能影响准确率。这时候就需要用一台我们认为准确的机器来校对时间不准的机器。这个校对通常是通过一个\cindex{NTP}服务\footnote{协议定义在互联网标准RFC-1305。}来提供的。
 
 \subsection{时间的作用}
 
 时间是个很常见的事物。大家的手机、电脑都会告诉你当前时间是多少。虽然时间很普遍，时间的标准却是国家级战略工程。\cindex{中国科学院国家授时中心}作为我们国家的唯一官方时间提供单位， 其成立需要国务院和中央军委批准。 原因很简单，火箭、导弹、卫星等都通过自己携带的电脑来做速度的计算。这些武器的运动速度非常快，一秒钟可以移动7000米。如果时间仅有0.001秒的误差，对应的则是7米的误差。
 
 时间除了记录单个物体经历了多久以外，在分布式系统中时间更多是用来衡量不同节点的相对关系。在第\ref{logictime}节 \nameref{logictime} 中会有更多介绍。
+
+
+\subsection{时间的性质}
+
+在不考虑爱因斯坦的牛顿物理世界里，时间有个非常好的性质是它可以用连续的正实数在表示。因此时间的性质和正实数的性质一致。具体来说时间有如下特性：
+\begin{enumerate}
+    \item 两个时间之间可以比大小。时间大表示后发生，时间小表示先发生。
+    \item 两个时间之间的时间间隔有比例关系。比如3小时时间间隔是1小时时间间隔的3倍。
+\end{enumerate}
+
+虽然时间间隔之间是存在比例关系，两个时间点之间是不存在比例关系的，比如2020年不是1010年的两倍。存在这个区别的原因在于时间的值取决于参考点的设置，即0点是什么时候。如果是计算机，0点是1970年1月1日0点。如果是公历，0点是耶稣诞生的时候。
+
+时间的另一个常见误解是人们通常想知道现在是什么时间。在日常生活中如果听见有人问现在几点了，大家会不假思索的看看表，报一个看到的时间。其实严格来讲，当你看到时间的一瞬间这个时间已经过去了，成为了历史时间。这也是人不能两次踏入同一条河流的原因\footnote{It is not possible to step twice into the same river according to Heraclitus, or to come into contact twice with a mortal being in the same state。}
+
+
+\subsection{时间的获取}
+
+时间是一个正实数，因此时间的精度是无限的\footnote{准确的说精度是可数的，即countable。}。由于计算机的数据表示形式是有限的，这就意味着我们需要对时间精度做一些取舍\label{timeaccuracy}。一般来说精度越高，获取的难度越大。一般来说有以下几种获取方式：
+\begin{enumerate}
+    \item 调用操作系统API，获取本地机器当时的时间。
+    \item 通过NTP获取网络时间。NTP是一个层级传播系统。最顶层通过高精度物理设备获取高精度时间。这个时间会逐层传播下去。用户通过UDP网络协议获取时间。
+    \item 通过PTP\footnote{Precision Time Protocol。}获取时间。PTP精度在毫秒级以下，通常作为金融高频交易系统、电网、电信通讯等系统做时间同步用。PTP假设时间的生产者通过广播的方式和消费者之间直接通讯，不通过路由器。
+    \item 通过GPS获取时间。GPS通常提供经纬度坐标和高度这3维数据。其实GPS还提供第4维数据时间。每个GPS内都有多个原子钟，这样就算某个原子中出了问题，备份系统也能提供准确时间。
+\end{enumerate}
+
 
 \subsection{时间存在的问题}
 
