--- a/src/pds.tex
+++ b/src/pds.tex
@@ -120,6 +120,13 @@
 \date{\today}
 
 \maketitle
+
+\begin{figure}[H]
+\begin{center}
+    \includegraphics{images/qrcode}
+\end{center}
+\end{figure}
+
 \tableofcontents
 
 
