--- a/src/prelude/prelude.tex
+++ b/src/prelude/prelude.tex
@@ -1,7 +1,16 @@
-十多年前我第一次走出校园正式从事软件开发工作。当时的一个任务是写一个批处理程序。这个程序有三个进程，需要在三台不同机器上运行。这些进程之间有先后依赖关系，需要按照特定的顺序启动。当时还没有zookeeper，也没有etcd，Raft算法还没有被发明。当时试了很多方法都没有作用。最后只能靠人来手动维护进程状态。如果发现进程因为启动顺序错误报警的话手动重启正确的进程。
+\epigraph{夫以铜为镜，可以正衣冠；以史为镜，可以知兴替；以人为镜，可以明得失。}{李世民 \\ 《旧唐书·魏徵传》}
+
+想写这本书已经由来已久了。金融是一个非常古老的行业，在欧美等国家已经有成百上千年的成熟发展。随着上世纪中叶计算机技术的崛起，金融行业的广度和深度都有了长足的发展。国内在上世纪末才与外界有了广泛的接触，逐步引入国外的业务和系统。然而知其然而不知其所以然，虽然软件系统可以引进，软件设计的核心原理及发展历史却无法引进。另外,金融行业的利润来自于信息不对称，计算机技术作为处理信息的最重要工具，在金融行业里是核心竞争力，不会有人会把最新的系统拱手送人。这个发展是比较合理的。因为在行业发展早期，市场会比效率更重要，系统只要能快速上线支撑业务就可以了，不需要以运维成本作为核心考核指标。由于没有历史遗留负担，业务可以快速弯道超车，但是买来的系统却不能快速迭代。这时候系统作为核心竞争力才能体现出应有的重要性。
 
 
-之后我就换了组，慢慢的就把这件事情遗忘了。大概一年多以后我突然想起了这个曾经让我头疼的问题。于是我请教了现在维护这个程序的开发人员。他很开心的给我展示了他的新解决方案。他做了一个很小的改动。之前每个进程如果发现所依赖的进程没有启动的话会出错退出。他把出错逻辑改成了一直重启，这样总有一次会有一个进程能启动正确，多来几次的话三个进程都能启动正确。我想了一想好像是这个道理。当时有一点不甘心。我可以写操作系统和编译器，却为什么连三个进程怎么正确启动都做不到。
+不想写这本书也有很久时间了。虽然我在金融行业有一些浸润，毕竟时间有限，能认识的业务有限，所掌握的系统也有限。有一些内容是耳熟能详，有一些内容是道听途说。如果给大家介绍的太少，行业面会偏窄，大家能学习、借鉴和运用的有限，会浪费大家的财力和时间。如果给大家介绍的太多，一定会有些内容深度不够，怕将大家引入歧途。既然说多说少都有错，最为稳妥的是不言而内省。
 
 
-多年以后我带着这个疑问进入了互联网的世界。这时候才发现我之前碰到的是分布式系统的一个简单到不能再简单的问题。分布式系统有它特定的领域问题和解决方案。对于做工程的人来说大多数情况下这些问题都有固定的解题套路。但是市面上缺乏能把问题解释的比较清楚的教材。这便是这本书背后的动机。
+最终决定写这本书的原因是为了以正视听。条条大路通罗马，每个人都有自己实现金融系统的方式。虽然写程序的活是个理工科的事情，金融系统的研发人员却都有文人相轻的习惯，认为其他人不一样即不正确。长此以往必定劣币驱逐良币。因此毛遂自荐，梳理各方脉络，希望能正本清源，为正确的行业标准树立起到绵薄之力。
+\newline{}
+\newline{}
+
+
+\rightline{任杰}
+\rightline{上海浦东}
+\rightline{2020年5月}
