add first chapter

--- a/src/fdfs.tex
+++ b/src/fdfs.tex
@@ -56,6 +56,12 @@
 
 
 
+%漢字自動注音
+\usepackage{xpinyin}
+
+
+
+
 % set font
 
 
@@ -111,8 +117,6 @@
 
 
 
-
-
 % start of the document  
 \begin{document}
 
@@ -142,6 +146,7 @@
 
 \input{prelude/include}
 \input{intro/include}
+\input{principles/include}
 \input{naive.implementation/include}
 \input{domain.object/include}
 \input{event.sourcing/include}
