--- a/src/intro/include.tex
+++ b/src/intro/include.tex
@@ -10,11 +10,11 @@
 
 所以当我们提到金融系统要求非常高的时候，并不是对正常的情况有特别高的要求，比如说常见的系统延时和吞吐量等等。而是对不正常的情况有非常高的要求。系统尽量不要出任何问题。如果万一出问题了，需要有办法能清楚的知道究竟是在什么时候出了什么问题。出了问题并不可怕，怕的是不知道出了什么问题。
 
-具体细分来说金融系统有如下几点要求：
+具体细分来说金融系统有如下几点要求：todo
 \begin{enumerate}
-    \item 正确性。这是从系统实现人员来看的正确性。系统需要有合理的架构设计，有正确的实现，有相应的测试来保证代码正确率。
+    \item 正确性。这是从系统实现人员角度来看的正确性。系统需要有合理的架构设计，有正确的实现，有相应的测试来保证代码正确率。
     \item 可解释。这是从第三方审计的角度来看的正确性。产品和业务人员需要有能力独立验证关键业务逻辑的正确性。
-    \item 可靠性。系统在各种不同异常情况下下对正确性保证的量化衡量。
+    \item 可靠性。系统在各种不同异常情况下对正确性保证的量化衡量。
     \item 可维护。完整的软件系统并不是一蹴而就，而是逐步迭代和升级的。金融系统的设计需要让系统容易升级。
     \item 性能。虽然一般来说性能不是金融系统追求的目标，但是需要保证业务所需要的合理的性能要求。
 \end{enumerate}
