--- a/src/prelude/prelude.tex
+++ b/src/prelude/prelude.tex
@@ -3,10 +3,10 @@
 想写这本书已经由来已久了。金融是一个非常古老的行业，在欧美等国家已经有成百上千年的成熟发展。随着上世纪中叶计算机技术的崛起，金融行业的广度和深度都有了长足的发展。国内在上世纪末才与外界有了广泛的接触，逐步引入国外的业务和系统。然而知其然而不知其所以然，虽然软件系统可以引进，软件设计的核心原理及发展历史却无法引进。另外,金融行业的利润来自于信息不对称，计算机技术作为处理信息的最重要工具，在金融行业里是核心竞争力，不会有人会把最新的系统拱手送人。这个发展是比较合理的。因为在行业发展早期，市场会比效率更重要，系统只要能快速上线支撑业务就可以了，不需要以运维成本作为核心考核指标。由于没有历史遗留负担，业务可以快速弯道超车，但是买来的系统却不能快速迭代。这时候系统作为核心竞争力才能体现出应有的重要性。
 
 
-不想写这本书也有很久时间了。虽然我在金融行业有一些浸润，毕竟时间有限，能认识的业务有限，所掌握的系统也有限。有一些内容是耳熟能详，有一些内容是道听途说。如果给大家介绍的太少，行业面会偏窄，大家能学习、借鉴和运用的有限，会浪费大家的财力和时间。如果给大家介绍的太多，一定会有些内容深度不够，怕将大家引入歧途。既然说多说少都有错，最为稳妥的是不言而内省。
+不想写这本书也有很久时间了。虽然我在金融行业有一些浸润，毕竟时间有限，能认识的业务有限，所掌握的系统也有限。有一些内容是耳熟能详，另一些则是道听途说。如果给大家介绍的太少，行业面会偏窄，大家能学习、借鉴和运用的有限，担心会浪费大家的财力和时间。如果给大家介绍的太多，一定会有些内容深度不够，怕将大家引入歧途。既然说多说少都有错，最为稳妥的是不言而内省。
 
 
-最终决定写这本书的原因是为了以正视听。条条大路通罗马，每个人都有自己实现金融系统的方式。虽然写程序的活是个理工科的事情，金融系统的研发人员却都有文人相轻的习惯，认为其他人不一样即不正确。长此以往必定劣币驱逐良币。因此毛遂自荐，梳理各方脉络，希望能正本清源，为正确的行业标准树立起到绵薄之力。
+最终还是决定写一写。条条大路通罗马，金融系统理应有多种实现，偏重点不一。现在一家之言的态势愈发明显。因为担心劣币驱逐良币，特此毛遂自荐，梳理各方脉络，希望能正本清源，为正确行业的标准树立起到绵薄之力。
 \newline{}
 \newline{}
 
