add few referenced and make small changes

--- a/src/fdfs.tex
+++ b/src/fdfs.tex
@@ -109,6 +109,7 @@
 
 
 \newcommand\cindex[1]{\underline{#1}\index{#1}}
+\newcommand{\fullref}[1]{{\ref{#1} \nameref{#1}}} % One single link
 
 
 % set toc and section level
