--- a/src/principles/include.tex
+++ b/src/principles/include.tex
@@ -3,7 +3,7 @@
 
 \section{架构师的定义}
 
-架构师没有一个公认的清晰准确的定义。架构师会做一些开发人员的工作。一般来说高级或者资深程序员的下一步发展之路是成为一位架构师，所以偶尔重操旧业写写代码是常见的事情。架构师也可能会做一些产品经理的工作，比如在设计系统架构的时候考虑对用户交互体验的影响。架构师也有可能做一些项目管理工作，追踪项目进度，收集和分配项目需要的人力和物力资源。架构师也有可能做一些销售工作，和项目拓展人员一起列席项目推介会，从系统的角度向潜在客户营销产品优势。架构师日常工作之一是画各种架构图，需要熟练使用各种绘图工具和非线性编辑工具，而这些一般都是设计师的专长。不同的公司可能都有架构师这个岗位，但是对这个岗位的定位很有可能各不相同。
+架构师没有一个公认的清晰准确的定义。架构师会做一些开发人员的工作,一般来说高级或者资深程序员的下一步发展之路是成为一位架构师，所以偶尔重操旧业写写代码不足为奇。架构师也可能会做一些产品经理的工作，比如在设计系统架构的时候考虑对用户交互体验的影响。架构师也有可能做一些项目管理工作，追踪项目进度，收集和分配项目需要的人力和物力资源。架构师也有可能做一些销售工作，和项目拓展人员一起列席项目推介会，从系统的角度向潜在客户营销产品优势。架构师日常工作之一是画各种架构图，需要熟练使用各种绘图工具和非线性编辑工具，而这些一般都是设计师的专长。不同的公司可能都有架构师这个岗位，但是对这个岗位的定位很有可能各不相同。
 
 
 
@@ -30,7 +30,7 @@
 
 \section{架构设计六小原则}
 
-计算机软件是一个复杂的系统。复杂的系统总是似而不同，在细节的地方各不一样。因为细节决定成败，复杂的系统很难有屡试不爽\footnote{清·蒲松龄《聊斋志异·冷生》：“言未已，驴已蹶然伏道上，屡试不爽”。爽，差错、失败的意思。}的解法。尽管如此，解决的多了也会遗留一些经验。这些经验再加以重复验证就形成了原则。这些原则有其特殊的历史背景，不一定放之四海而皆准。但是不听老人言，吃亏在眼前，在能自行顿悟之前建议能熟诵于胸，以防不测。
+计算机软件是一个复杂的系统。复杂的系统总是似而不同，在宏观上类似，在细节的地方各有千秋。因为细节决定成败，复杂的系统很难有屡试不爽\footnote{清·蒲松龄《聊斋志异·冷生》：“言未已，驴已蹶然伏道上，屡试不爽”。爽，差错、失败的意思。}的解法。尽管如此，解决的多了也会遗留一些经验。这些经验再加以重复验证就形成了原则。这些原则有其特殊的历史背景，不一定放之四海而皆准。但是不听老人言，吃亏在眼前，在能自行顿悟之前建议能熟诵于胸，以防不测。
 
 \begin{center}
     \begin{pinyinscope}
@@ -69,7 +69,7 @@
 对于每个人来说，读是一个内容输入的过程，写是一个内容输出的过程。一般会认为这是两种不同的个人能力，不一定同时都很优秀或者都不优秀，比如有人可能阅读能力强但是写作能力弱，也有可能写作能力强但是阅读能力弱。同理，计算机的读写也是两个不同的行为。计算机的读和写的对象都是数据，但是读操作是数据的输入过程，写操作是数据的输出过程。这里提到的读写本不同的第一个不同点在于操作的不同。数据的输入和输出可能会面临不同的吞吐量、延时、容灾等需求，需要分别对待。
 
 
-读写本不同的第二个不同点非常难以发觉，那就是数据的不同。在\ref{statehasmultipleview}节状态多具象里我们介绍了数据分为正源数据和衍生数据两大类。之所以会有衍生数据的一个原因是数据的使用，即数据的读取，可能需要有特殊的优化方式。为了读性能的原因需要对正源数据做一些预处理，比如建索引。所以对于数据库的例子来说写的数据是正源数据，读的数据是衍生数据，所以读写的操作是基于两份不同的数据进行的。
+读写本不同的第二个不同点非常难以发觉，那就是数据有可能也是不同的。在\fullref{statehasmultipleview} 一节里我们介绍了数据分为正源数据和衍生数据两大类。之所以会有衍生数据的一个原因是数据的使用，即数据的读取，可能需要有特殊的优化方式。为了读性能的原因需要对正源数据做一些预处理，比如建索引。所以对于数据库的例子来说写的数据是正源数据，读的数据是衍生数据，所以读写的操作是有可能基于两份不同的数据进行的。
 
 
 总结一下。读写的不同在于读写的数据不同以及数据的流向不同。在架构设计时需要将读写分开考虑，分开优化。
