add 2 more summary of architecture notes

--- a/src/fdfs.tex
+++ b/src/fdfs.tex
@@ -1,6 +1,4 @@
-\documentclass[reqno,heading=true,fontset=macnew]{ctexbook}
-
-\usepackage[b5paper] {geometry}
+\documentclass[reqno,b5paper，heading=true,fontset=macnew]{ctexbook}
 
 
 \usepackage{amssymb}
