finish the first chapter

--- a/src/principles/include.tex
+++ b/src/principles/include.tex
@@ -23,7 +23,7 @@
 再者架构师的解决方案一旦实施便难以更改。复杂的软件是一个围绕核心组件的生态系统。核心组件用软件的形式解决核心业务需求，周边还需要有各种辅助系统来保证业务的完整度。核心组件由于牵涉过多，其升级会牵一发而动全身。因此为了保证复杂系统的演进，架构师需要在早期全盘思考未来的各种可能发展，从中选择一条合理的道路。
 
 
-最后架构师需要将系统设计的容易改变。乍一看这是一个悖论，如果架构师的长期架构设计一旦实施就难以改变，那怎么又能容易改变了呢？这是一个哲学问题，需要从哲学的角度来看。这和唯一不变的是变化是同一个道理，也是区分优秀架构师和平庸架构师的标志。系统的主体架构奠定了系统的基础，和房子的承重墙一样，起到了中流砥柱\footnote{《晏子春秋·内篇谏下》：“吾尝从君济于河，鼋衔左骖，以入砥柱之中流。”}的作用。承重墙不能敲，系统的主体架构也不能轻易改变。但是在主体架构之上可以有很多衍生的系统功能，就和房子可以有不同装修一样，对不同的需求可以有不同的实现\footnote{忒修斯之船（The Ship of Theseus）悖论：如果忒修斯的船上的木头被逐渐替换，直到所有的木头都不是原来的木头，那这艘船还是原来的那艘船吗？}。
+最后架构师需要将系统设计的容易改变。乍一看这是一个悖论，如果架构师的长期架构设计一旦实施就难以改变，那怎么又能容易改变了呢？这是一个哲学问题，需要从哲学的角度来看。这和唯一不变的是变化是同一个道理，也是区分优秀架构师和平庸架构师的标志。系统的主体架构奠定了系统的基础，和房子的承重墙一样，起到了中流砥柱\footnote{《晏子春秋·内篇谏下》：吾尝从君济于河，鼋衔左骖，以入砥柱之中流。}的作用。承重墙不能敲，系统的主体架构也不能轻易改变。但是在主体架构之上可以有很多衍生的系统功能，就和房子可以有不同装修一样，对不同的需求可以有不同的实现\footnote{忒修斯之船（The Ship of Theseus）悖论：如果忒修斯的船上的木头被逐渐替换，直到所有的木头都不是原来的木头，那这艘船还是原来的那艘船吗？}。
 
 
 所以总结一下。架构师解决的问题是长期抽象的问题，需要能将难以改变的系统变得容易改变。
@@ -31,7 +31,7 @@
 
 \section{架构设计六小原则}
 
-计算机软件是一个复杂的系统。复杂的系统总是似而不同，在宏观上类似，在细节的地方各有千秋。因为细节决定成败，复杂的系统很难有屡试不爽\footnote{清·蒲松龄《聊斋志异·冷生》：“言未已，驴已蹶然伏道上，屡试不爽”。爽，差错、失败的意思。}的解法。尽管如此，解决的多了也会遗留一些经验。这些经验再加以重复验证就形成了原则。这些原则有其特殊的历史背景，不一定放之四海而皆准。但是不听老人言，吃亏在眼前，在能自行顿悟之前建议能熟诵于胸，以防不测。
+计算机软件是一个复杂的系统。复杂的系统总是似而不同，在宏观上类似，在细节的地方各有千秋。因为细节决定成败，复杂的系统很难有屡试不爽\footnote{清·蒲松龄《聊斋志异·冷生》：言未已，驴已蹶然伏道上，屡试不爽。爽，差错、失败的意思。}的解法。尽管如此，解决的多了也会遗留一些经验。这些经验再加以重复验证就形成了原则。这些原则有其特殊的历史背景，不一定放之四海而皆准。但是不听老人言，吃亏在眼前，在能自行顿悟之前建议能熟诵于胸，以防不测。
 
 \begin{center}
     \begin{pinyinscope}
@@ -108,7 +108,7 @@
 
 \subsection{优化守本分}
 
-如章首所引，提前优化是万恶之源。不提前的优化也需要注意。每个程序都有既定的功能，这就是在软件工程里提到的功能性需求\footnote{功能性需求即functional requirement。}。程序还有一些对于运行效率相关的要求，比如吞吐量、响应时间等。这些的学名叫非功能性需求\footnote{非功能性需求即non-functional requirement。}。优化是会改变程序的行为，但是这种改变只能影响非功能性需求，不能影响功能性需求。这是优化的一道红线，不能僭越。优化守本分\footnote{《荀子·非相》：“小辩不如见端，见端不如见本分。”}就是要守住这根红线。
+如章首所引，提前优化是万恶之源。不提前的优化也需要注意。每个程序都有既定的功能，这就是在软件工程里提到的功能性需求\footnote{功能性需求即functional requirement。}。程序还有一些对于运行效率相关的要求，比如吞吐量、响应时间等。这些的学名叫非功能性需求\footnote{非功能性需求即non-functional requirement。}。优化是会改变程序的行为，但是这种改变只能影响非功能性需求，不能影响功能性需求。这是优化的一道红线，不能僭越。优化守本分\footnote{《荀子·非相》：小辩不如见端，见端不如见本分。}就是要守住这根红线。
 
 
 在实际过程中会出现无论怎么优化，非功能性需求都无法达到的情况，比如需要达到非常高的吞吐量。这时候会通过放弃一些业务的要求来简化系统实现。常见的方法有最终一致性、事务补偿等。这时候同时出现了系统优化和功能改变，但由于功能改变是因，系统优化是果，因果关系不同，并没有违反原则。
@@ -119,7 +119,10 @@
 
 辩证唯物主义认为，事物的运动发展是变与不变的统一。显然变与不变的相对关系是一个偏哲学的问题。由于我们是介绍实践为主，不深入做理论分析，所以在这里不做过多的阐述，只举几个例子。
 
-一个例子是关系型数据库的查询。关系型数据库访问的方法一般是通过SQL结构化查询语句。
+一个例子是关系型数据库的查询。关系型数据库访问的方法一般是通过SQL结构化查询语句。不同人会有不同的查询内容和方式。在这种场景下数据库里的数据是相对不变的，SQL查询语句是变化的。但是随着互联网的发展，人们对查询结果的实时性要求越来越高。比如在大型的搜索网站、电商或者新闻网站的搜索界面，当输入一个查询条件之后，网站会不断的推送最新的查询结果。在这种情况下查询语句是不变的，数据是变化的。数据和查询在这两种情况下的实现也不相同。在传统关系型数据库的情况下，为了加快查询结果，数据库会对表建立索引。在实时查询结果推送的情况下，数据系统会对查询语句做索引。
+
+
+另一个例子是对数据的操作。金融数据和所有数据一样，一旦修改就变化的和以前不一样了。这样金融行业的审计人员怎么知道几个月或者几年前数据是怎样的呢？一般为了应付审计，系统开发人员会在审计周期开始时做一个全量的数据拷贝，并将访问权限设为只读。这样就有了一个不变的数据版本。这种设计下数据是一直在变化的。另一种系统设计的思路稍有不同。对数据的修改并不会改变数据，而是生成一份新的数据，或者说是数据的一个新的版本。在这种设计下数据是永远不变的，变化的是数据的个数\footnote{Heraclitus of Ephesus: You cannot step twice into the same river.}。这两种设计都能解决同一个问题，但是难易程度不同，孰优孰劣高下立见。
 
 
 
