--- a/src/fdfs.tex
+++ b/src/fdfs.tex
@@ -1,5 +1,6 @@
 \documentclass[reqno,b5paper，heading=true,fontset=macnew]{ctexbook}
 
+\usepackage[height=10in,b6paper,hmargin={3cm,0.8in}]{geometry}
 
 \usepackage{amssymb}
 \usepackage{latexsym}
