change A4 to B5 paper size

--- a/src/fdfs.tex
+++ b/src/fdfs.tex
@@ -1,7 +1,5 @@
 \documentclass[reqno,b5paper，heading=true,fontset=macnew]{ctexbook}
 
-\usepackage[height=10in,b6paper,hmargin={3cm,0.8in}]{geometry}
-
 \usepackage{amssymb}
 \usepackage{latexsym}
 
@@ -93,7 +91,7 @@
 % set page size
 \usepackage{geometry}
 %\geometry{a4paper}
-\geometry{a4paper,top=2cm,bottom=2cm,left=2.5cm,right=2cm}
+\geometry{b5paper,top=2cm,bottom=2cm,left=2.5cm,right=2cm}
 
 
 % set programming code highlight
